new style added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         </title>
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
         <link href="" rel="icon" type="image/png"/>
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:700" rel="stylesheet"/>
     </head>
     <body>
         <header class="bhromaon-section">
@@ -20,8 +21,8 @@
                     </h6>
                 </div>
                 <form class="bhromaon-section__form">
-                    <input name="" placeholder="Search Your Travel Destination" type="text" class="bhromaon-section__text-input"/>
-                    <input name="" type="search" value="Search" class="bhromaon-section__search-input"/>
+                    <input name="" placeholder="Search Your Travel Destination" type="text" class="bhromaon-section__search-input"/>
+                    <button class="bhromaon-section__button">Search</button>
                 </form>
                 <div class="bhromaon-section__scroll-down">
                     <h6 class="bhromaon-section__scroll-down-title">
@@ -81,8 +82,8 @@
                         </button>
                     </div>
                     <div class="whoweare-section__graphics">
-                        <img alt="" src="" class="whoweare-section__home-img"/>
-                            <img alt="" src="" class="whoweare-section__nature-img"/>
+                        <img alt="" src="images/whowearehouse-img.png" class="whoweare-section__home-img"/>
+                            <img alt="" src="images/whoweare-nature-img.png" class="whoweare-section__nature-img"/>
                     </div>
                 </div>
             </div>
@@ -113,8 +114,6 @@
                 	<h6 class="whatwedo-section__description-subtitle">Spain</h6>
                 	<h4 class="whatwedo-section__description-title">Grand Spain Madrid</h4>
                 	<p class="whatwedo-section__description-text">But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-                </div>
-                <div class="whatwedo-section__button-box">
                 	<button class="whatwedo-section__button">Book Now</button>
                 </div>
             </div>
@@ -126,8 +125,6 @@
                 	<h6 class="travelwithus-section__description-subtitle">Spain</h6>
                 	<h4 class="travelwithus-section__description-title">Grand Spain Madrid</h4>
                 	<p class="travelwithus-section__description-text">But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system</p>
-                </div>
-                <div class="travelwithus-section__button-box">
                 	<button class="travelwithus-section__button">Book Now</button>
                 </div>
             </div>
@@ -135,17 +132,19 @@
 
         <section class="our-tourist-section">
             <div class="container">
+                <div class="our-tourist-section__container">
             	<div class="our-tourist-section__description">
             		<h2 class="our-tourist-section__description-title">What Our  Tourist Say</h2>
             	</div>
-            	<div>
+            	<div class="our-tourist-section__flex-container">
             		<div class="our-tourist-section__description-img-box">
-            			<img src="images/whatourtouristsa-img.png" class="our-tourist-section__description-img"/></div>
-            		<div>
+            			<img src="images/whatourtouristsa-img.png" class="our-tourist-section__description-img"/>
+                    </div>
+            		<div class="our-tourist-section__description-info-box">
             			<h6 class="our-tourist-section__description-subtitle">Sam Sumon</h6>
             			<p class="our-tourist-section__description-text">  But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system was account  born and I account will give you a nai the complete account of the system</p>
             		</div>
-
+                  </div>
             	</div>
             </div>
         </section>
